unpackaged/unpackaged/unpackaged/objects/ODX_Warrant__c.object
<CustomObject>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ODX Warrants</relationshipLabel>
        <relationshipName>ODX_Warrants</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ODX_Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ODX Case</label>
        <referenceTo>ODX_Case__c</referenceTo>
        <relationshipLabel>ODX Warrants</relationshipLabel>
        <relationshipName>ODX_Warrants</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warrant_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warrant Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warrant_Subtype__c</fullName>
        <label>Warrant Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ODX Warrant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ODX Warrant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ODX Warrants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>